--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -30,8 +30,15 @@ body {
 
       nav{
             height: 100px;
-            background: black;
+      
 
+      }
 
+      #kit{
+        
+            float: right;
+            
+            width: 35%;
+            height: 35%;
       }
 }
