--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ body {
   src: url("../fonts/bellota_regular_macroman/Bellota-Regular-webfont.woff");
 }
 
+* {
+  font-family: "Bellota";
+}
+
 body {
   font-family: "Bellota";
 }
@@ -35,12 +39,65 @@ body form input[type="checkbox"] {
 }
 
 body nav {
-  height: 100px;
+  height: 95px;
 }
 
 body #kit {
-  float: right;
-  width: 35%;
-  height: 35%;
+  border: #15c5bd 4px solid;
+  width: 65%;
+  height: auto;
+}
+
+body #kitdescribe {
+  width: 50%;
+  height: auto;
+  margin: auto;
+  margin-bottom: 5%;
+}
+
+body h1 {
+  color: #15c5bd;
+}
+
+body figure {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 0;
+  margin: 0;
+}
+
+body #jumbo {
+  padding: 0;
+  margin: 0;
+}
+
+body .navbar-brand {
+  width: 10%;
+  height: auto;
+}
+
+body .btn {
+  background-color: #15c5bd;
+  border: #109c95 1px solid;
+}
+
+body #describeQ {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body img {
+  width: 80%;
 }
 /*# sourceMappingURL=style.css.map */
