--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,10 +38,6 @@ body form input[type="checkbox"] {
   display: inline-block;
 }
 
-body nav {
-  height: 95px;
-}
-
 body #kit {
   border: #15c5bd 4px solid;
   width: 65%;
@@ -57,6 +53,7 @@ body #kitdescribe {
 
 body h1 {
   color: #15c5bd;
+  text-shadow: teal 1px 1px 1px;
 }
 
 body figure {
@@ -71,14 +68,27 @@ body figure {
   margin: 0;
 }
 
+body .jumbotron {
+  margin-bottom: 0;
+}
+
+body .jumbotron h1 {
+  font-size: 50px;
+}
+
 body #jumbo {
   padding: 0;
   margin: 0;
 }
 
+body #jumbo p {
+  font-size: large;
+}
+
 body .navbar-brand {
-  width: 10%;
-  height: auto;
+  margin: 0;
+  padding: 0;
+  width: 140px;
 }
 
 body .btn {
@@ -99,5 +109,126 @@ body #describeQ {
 
 body img {
   width: 80%;
+}
+
+body .fa-twitter {
+  color: #00acee;
+}
+
+body .fa-dribble {
+  color: #EA4C89;
+}
+
+body .fa-google-plus-g {
+  color: #dd4b39;
+}
+
+body a i:hover {
+  color: grey;
+}
+
+body .fa-linkedin {
+  color: #0e76a8;
+}
+
+body #product {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+body #products h2 {
+  color: #15c5bd;
+  text-shadow: teal 1px 1px 1px;
+}
+
+body .card {
+  min-width: auto;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  min-height: auto;
+  max-height: -webkit-max-content;
+  max-height: -moz-max-content;
+  max-height: max-content;
+  border: #109c95 1px dashed;
+  padding: 0;
+}
+
+body .card img {
+  width: 271px;
+  height: 253px;
+}
+
+body .card-body {
+  min-width: auto;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  min-height: auto;
+  max-height: -webkit-max-content;
+  max-height: -moz-max-content;
+  max-height: max-content;
+}
+
+body #who {
+  background-color: #15c5bd;
+  color: white;
+  font-weight: bold;
+}
+
+body #who h2 {
+  text-shadow: teal 2px 1px 2px;
+}
+
+body #who p {
+  font-size: 25px;
+  text-shadow: teal 1px 1px 2px;
+}
+
+body #who figure {
+  background-color: white;
+  border-radius: 70%;
+  border: teal 1px solid;
+}
+
+body #who figure img {
+  width: 50%;
+}
+
+body #who div {
+  padding: 0;
+}
+
+body #who article {
+  padding: 0;
+  margin: 0;
+}
+
+body i.fas {
+  color: #15c5bd;
+}
+
+body #site a {
+  color: #15c5bd;
+}
+
+body #hack {
+  color: #15c5bd;
+}
+
+body #contact h2 {
+  color: #15c5bd;
+  text-shadow: teal 1px 1px 1px;
+}
+
+body footer p {
+  font-size: larger;
+}
+
+body #poulette {
+  color: #15c5bd;
 }
 /*# sourceMappingURL=style.css.map */
