--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,26 +3,6 @@
   margin: 0;
   outline: none;
 }
-/* #myBtn {
-  
-  position: fixed; 
-  bottom: 20px; 
-  right: 30px; 
-  z-index: 99; 
-  border: none; 
-  outline: none; 
-  background-color:;
-  color: white; 
-  cursor: pointer; 
-  padding: 15px; 
-  border-radius: 10px;
-  font-size: 18px; 
-}
-
-#myBtn:hover {
-  background-color: #555; 
-} */
-
 
 body {
   overflow-x: hidden;
@@ -131,24 +111,24 @@ body img {
   width: 80%;
 }
 
+body .fa-facebook {
+  color: #3b5998;
+}
+
 body .fa-twitter {
   color: #00acee;
 }
 
-body .fa-dribble {
+body .fa-dribbble {
   color: #EA4C89;
 }
 
-body .fa-google-plus-g {
-  color: #dd4b39;
+body .fa-linkedin-in {
+  color: #0e76a8;
 }
 
 body a i:hover {
   color: grey;
-}
-
-body .fa-linkedin {
-  color: #0e76a8;
 }
 
 body #product {
@@ -277,5 +257,9 @@ body #bat {
           animation-duration: 5s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
+}
+
+body .parallax {
+  background-color: red;
 }
 /*# sourceMappingURL=style.css.map */
