--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -110,17 +110,22 @@ body {
             width: 80%;
       }
 
+      .fa-facebook{
+            color: $facebook;
+            
+      }
+
       .fa-twitter{
             color: $twitter;
             
       }
       
-      .fa-dribble{
+      .fa-dribbble{
             color: $dribbble;
       }
 
-      .fa-google-plus-g{
-            color: $google-plus;
+      .fa-linkedin-in{
+            color: $linkedIn;
 
            
       }
@@ -128,10 +133,8 @@ body {
        a i:hover{
                   color: grey;
             }
-
-      .fa-linkedin{
-            color: $linkedIn;
-      }
+      
+      
 
       #product{
            
@@ -234,7 +237,7 @@ body {
 
       #contact{
 
-
+      
 
             h2{
                   color: $blue;
@@ -243,6 +246,7 @@ body {
       }
 
       footer{
+
 
             p{
                   font-size: medium;
@@ -268,7 +272,27 @@ body {
             animation-fill-mode: both;
       }
       
-      
+      // #video{
+      //       width: auto;
+      //       height: auto;
+      //       display: block;
+      //       -o-object-fit: cover;
+      //       object-fit: cover;
+            
+            
+      // }
+
+      // video{
+      //       width: 100%;
+      //       height: 100%;
+      //       background-size: auto;
+            
+
+      // }
+
+      .parallax{
+            background-color: red;
+      }
 }
 
 
