--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,7 +259,10 @@ body #bat {
           animation-fill-mode: both;
 }
 
-body .parallax {
-  background-color: red;
+body video {
+  width: 100%;
+  height: 100%;
+  background-size: auto;
+  position: relative;
 }
 /*# sourceMappingURL=style.css.map */
