--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -272,27 +272,18 @@ body {
             animation-fill-mode: both;
       }
       
-      // #video{
-      //       width: auto;
-      //       height: auto;
-      //       display: block;
-      //       -o-object-fit: cover;
-      //       object-fit: cover;
-            
-            
-      // }
 
-      // video{
-      //       width: 100%;
-      //       height: 100%;
-      //       background-size: auto;
+
+      video{
+            width: 100%;
+            height: 100%;
+            background-size: auto;
+            position: relative;
             
 
-      // }
-
-      .parallax{
-            background-color: red;
       }
+
+      
 }
 
 
