--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,21 +21,68 @@ body {
   font-family: "Bellota";
 }
 
-body form input, body form select, body form textarea {
+body form#contact-form {
+  width: 400px;
+}
+
+body form#contact-form label {
   display: block;
   margin: 5px;
 }
 
-body form textarea {
+body form#contact-form label input {
+  border: 1px solid darkgray;
+}
+
+body form#contact-form label .break {
+  display: block;
+  width: 100%;
+}
+
+body form#contact-form label.inline-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+body form#contact-form label.inline-label input, body form#contact-form label.inline-label select {
+  width: 200px;
+}
+
+body form#contact-form textarea {
+  width: 100%;
+  height: 100px;
   resize: none;
 }
 
-body form .form-btn {
-  padding: 5px 8px;
+body form#contact-form #buttons {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 5px 20px;
 }
 
-body form input[type="checkbox"] {
-  display: inline-block;
+body form#contact-form .form-btn {
+  padding: 5px 8px;
 }
 
 body #kit {
