--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,29 +11,53 @@
 
 body {
       font-family: "Bellota";
-
-
-      form {
-            input, select, textarea {
+      
+      form#contact-form {
+            width: 400px;
+            label {
                   display: block;
                   margin: 5px;
+
+                  input {
+                        border: 1px solid rgb(169, 169, 169);
+                  }
+
+                  .break {
+                        display: block;
+                        width: 100%;
+                  }
+            }
+            label.inline-label {
+                  display: flex;
+                  flex-direction: row;
+                  flex-wrap: nowrap;
+                  justify-content: space-between;
+                  input, select {
+                        width: 200px;
+                  }
             }
 
             textarea {
+                  width: 100%;
+                  height: 100px;
                   resize: none;
+            }
+
+            #buttons {
+                  width: 100%;
+                  display: flex;
+                  flex-direction: row;
+                  flex-wrap: nowrap;
+                  justify-content: space-between;
+
+                  padding: 5px 20px;
+
             }
 
             .form-btn {
                   padding: 5px 8px;
             }
-
-            input[type="checkbox"] {
-                  display: inline-block;
-            }
-
       }
-
-      
 
       #kit{
             border: $blue 4px solid;
@@ -285,6 +309,3 @@ body {
 
       
 }
-
-
-
